Починил тесты. Не прошло и 9 месяцев